re PR tree-optimization/39595 (ICE in vectorizable_store at tree-vect-transform.c:5361)

PR tree-optimization/39595
	* tree-vect-analyze.c (vect_build_slp_tree): Check that the size of
	interleaved loads group is not greater than the SLP group size.

From-SVN: r145465