gcc/tree-vect-analyze.c
@@ -2933,8 +2933,24 @@ vect_build_slp_tree (loop_vec_info loop_vinfo, slp_tree *node,
  
                     return false;
                   }
- 
-                first_load = DR_GROUP_FIRST_DR (vinfo_for_stmt (stmt));
+
+                /* Check that the size of interleaved loads group is not
+                   greater than the SLP group size.  */
+                if (DR_GROUP_SIZE (vinfo_for_stmt (stmt))
+                    > ncopies * group_size)
+                  {
+                    if (vect_print_dump_info (REPORT_SLP))
+                      {
+                        fprintf (vect_dump, "Build SLP failed: the number of "
+                                            "interleaved loads is greater than"
+                                            " the SLP group size ");
+                        print_gimple_stmt (vect_dump, stmt, 0, TDF_SLIM);
+                      }
+
+                    return false;
+                  }
+
+              first_load = DR_GROUP_FIRST_DR (vinfo_for_stmt (stmt));
  
               if (first_load == stmt)
                 {
